Fix spacing inconsistency

--- a/src/components/common/OptionControls/IndentedChild/IndentedChild.module.scss
+++ b/src/components/common/OptionControls/IndentedChild/IndentedChild.module.scss
@@ -1,6 +1,6 @@
 @import "src/assets/styles/vars.module.scss";
 .indentedChild {
     margin-left: 6px;
-    padding: 1rem 0 0 1rem;
+    padding: 0.5rem 0 0 1rem;
     border-left: 1px solid $light-gray-4;
 }
